[feat] add swagger doc
